<resources xmlns:tools="http://schemas.android.com/tools">

    <!--App-->
    <string name="app_name">Semo</string>
    <string name="app_name2">SEMO</string>
    <string name="app_name3">세탁의 모든 것, 세모</string>
    <string name="client_id" tools:ignore="TypographyDashes">306321335728-9orb3pfbish4sson8fieag9cc07bd8ru.apps.googleusercontent.com</string>

    <!--SignInActivity & SignUpActivity-->
    <string name="text_signIn">로그인</string>
    <string name="text_signUp1">아직 회원이 아니신가요?</string>
    <string name="text_signUp2">회원가입</string>
    <string name="text_google_signIn">Google로 로그인</string>
    
    <string name="text_welcome">환영합니다</string>
    <string name="text_request_agreement">약관 동의가 필요합니다</string>
    <string name="text_all_consent">전체 동의</string>
    <string name="text_person_information">개인정보 취급방침</string>
    <string name="text_next">다음으로</string>

    <!--MainActivity-->
    <string name="text_recently1">최근에 추가한 세탁법</string>
    <string name="text_recently2">내가 최근에 추가한 세탁법을 확인하세요!</string>
    <string name="text_myMethod1">내가 저장한 세탁법</string>
    <string name="text_myMethod2">이전에 내가 저장한 세탁법을 확인하세요!</string>
    <string name="text_no_recently">최근에 추가한 세탁법이 존재하지 않습니다.</string>
    <string name="text_no_method">내가 저장한 세탁법이 존재하지 않습니다.</string>

    <!--SelectActivity-->
    <string name="text_select_method">세탁 표시 기호를 선택할 방식을 골라주세요.</string>
    <string name="text_select_method2">카메라 인식 또는 아이콘 선택 2가지 방식이 존재합니다.</string>
    <string name="text_use_camera1">카메라 활용하기</string>
    <string name="text_use_camera2">카메라를 통해 라벨을\n직접 인식합니다.</string>
    <string name="text_use_list1">보기 선택하기</string>
    <string name="text_use_list2">아이콘을 보고 직접\n기호를 선택합니다.</string>

    <!--NextDialog-->
    <string name="text_next_title">인식 완료</string>
    <string name="text_next_sub">추가적으로 인식할 기호가 존재하시나요?</string>
    <string name="text_next_positive">그렇습니다</string>
    <string name="text_next_negative">괜찮습니다</string>

    <!--ListActivity-->
    <string name="text_select_symbol1">해당 세탁 기호를 선택해주세요.</string>
    <string name="text_select_symbol2">라벨을 확인한 후 해당하는 세탁 표시 기호를 선택해주세요.</string>
    <string name="text_check_laundry_method">세탁법 확인하기</string>

    <!--InfoActivity-->
    <string name="text_info_laundry_method">세탁법 정보</string>
    <string name="text_save">세탁법 저장하기</string>

    <!--AddActivity-->
    <string name="text_add_laundrty_method">세탁법 추가</string>
    <string name="text_laundry_method_title">세탁법 이름</string>
    <string name="text_laundry_method_content">추가적인 메모</string>
    <string name="text_add_image">이미지 등록</string>
    <string name="text_select_laundry_method">선택된 세탁기호</string>
    <string name="text_save_laundry_method">나의 세탁법으로 저장하기</string>
    <string name="text_pass_laundry_method">선택한 세탁기호가 많다면 옆으로 넘기며 확인하세요</string>

    <!--DeleteDialog-->
    <string name="text_delete_title">세탁법을 삭제하시겠습니까?</string>
    <string name="text_delete_sub">세탁법을 삭제하면 다시 복구가 불가합니다.</string>
    <string name="text_delete_positive">확인</string>
    <string name="text_delete_negative">취소</string>

    <!--MyLaundryActivity-->
    <string name="text_modify">수정하기</string>
    <string name="text_delete">삭제하기</string>
    <string name="text_show_image">이미지 상세보기</string>

    <!--ModifyActivity-->
    <string name="text_modify_laundry_method">세탁법 수정</string>
    <string name="text_change_image">이미지 변경</string>
    <string name="text_modify_my_method">나의 세탁법 수정하기</string>

</resources>