<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kr.hs.dgsw.stac.semo.viewmodel.dialog.DeleteViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_delete_title"
                    android:fontFamily="@font/font_bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_delete_sub"
                    android:fontFamily="@font/font"
                    android:textSize="12sp"
                    android:textColor="#8C8C8C"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D9D9D9"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_delete_positive"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:fontFamily="@font/font"
                    android:onClick="@{() -> viewModel.positiveEvent()}"
                    android:textColor="@color/mainColor" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#D9D9D9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:fontFamily="@font/font"
                    android:textColor="#FF7878"
                    android:onClick="@{() -> viewModel.negativeEvent()}"
                    android:text="@string/text_delete_negative" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>