<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="viewModel"
            type="kr.hs.dgsw.stac.semo.viewmodel.view.SelectViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                android:onClick="@{() -> viewModel.backEvent()}"
                app:tint="@color/mainColor"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/selectMethod_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_select_method"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/font_bold"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:layout_marginTop="25dp"
            android:padding="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectMethod_textView">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView1"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:onClick="@{() -> viewModel.cameraEvent()}"
                app:cardBackgroundColor="#3899F8"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectMethod_textView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_camera"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/font_bold"
                        android:text="@string/text_use_camera1"
                        android:textColor="#034C8C"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/text_use_camera2"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/font"
                        android:gravity="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.selectEvent()}"
                android:layout_marginStart="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="#5CB4EB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectMethod_textView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_photo"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:text="@string/text_use_list1"
                        android:textColor="#478AB4"
                        android:textSize="18sp"
                        android:fontFamily="@font/font_bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/text_use_list2"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:fontFamily="@font/font"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>