<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="kr.hs.dgsw.stac.semo.viewmodel.view.ModifyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.view.MyLaundryActivity">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/laundryImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/img_laundry3"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#993F8EBF" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:background="@drawable/layout_my_laundry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/linearLayout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="25dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_modify_laundry_method"
                                android:textColor="@color/mainColor"
                                android:textSize="20sp"
                                android:fontFamily="@font/font_bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="25dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_laundry_method_title"
                                android:textColor="#404040"
                                android:textSize="14sp"
                                android:fontFamily="@font/font" />

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:hint="여름 린넨 원피스 세탁법"
                                android:text="@={viewModel.title}"
                                android:textSize="12sp"
                                android:textColor="#404040"
                                android:fontFamily="@font/font"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="25dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_laundry_method_content"
                                android:textColor="#404040"
                                android:textSize="14sp"
                                android:fontFamily="@font/font"/>

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:hint="메모를 작성해주세요"
                                android:text="@={viewModel.content}"
                                android:textSize="12sp"
                                android:textColor="#404040"
                                android:fontFamily="@font/font"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginBottom="35dp"
                            android:onClick="@{() -> viewModel.cameraEvent()}"
                            app:cardBackgroundColor="@android:color/white"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:id="@+id/imageView"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/img_laundry3" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/text_change_image"
                                    android:textColor="@color/mainColor"
                                    android:fontFamily="@font/font" />

                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:text="@string/text_select_laundry_method"
                            android:textColor="@color/mainColor"
                            android:textSize="16sp"
                            android:fontFamily="@font/font_bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginEnd="25dp"
                            android:text="@string/text_pass_laundry_method"
                            android:textColor="#404040"
                            android:textSize="12sp"
                            android:fontFamily="@font/font" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="25dp"
                            android:orientation="horizontal"
                            android:scrollbars="none"
                            app:adapter="@{viewModel.selectSymbolAdapter}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_select_symbol" />


                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="25dp"
                            android:layout_marginBottom="25dp"
                            android:onClick="@{() -> viewModel.modifyEvent()}"
                            app:cardBackgroundColor="@color/mainColor"
                            app:cardCornerRadius="3dp"
                            app:cardElevation="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:fontFamily="@font/font"
                                android:text="@string/text_modify_my_method"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />
                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>
                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:theme="@style/AppTheme.ContentLoadingProgressBar"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>